unpackaged/main/default/objects/SDO_Einstein_Customer_Profile__c/SDO_Einstein_Customer_Profile__c.object-meta.xml
<CustomObject>
    <description>What: Used to showcase Einstein Prediction Builder capabilities.</description>
    <label>Customer Profile</label>
    <nameField>
        <label>Customer Profile</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Profile</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>