unpackaged/main/default/objects/SDO_Einstein_Customer_Profile__c/fields/Dependents__c.field-meta.xml
<CustomField>
    <fullName>Dependents__c</fullName>
    <label>Dependents</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>