unpackaged/main/default/objects/SDO_Einstein_Customer_Profile__c/fields/First_Year_Attrition_Outcome__c.field-meta.xml
<CustomField>
    <fullName>First_Year_Attrition_Outcome__c</fullName>
    <formula>IF( ISBLANK( Deactivation_Date__c ) , NULL,
IF((Deactivation_Date__c - Activation_Date__c)&lt;365 , &quot;TRUE&quot;, &quot;FALSE&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Year Attrition Outcome</label>
    <type>Text</type>
</CustomField>