unpackaged/main/default/objects/SDO_Einstein_Customer_Profile__c/fields/Homeowner__c.field-meta.xml
<CustomField>
    <fullName>Homeowner__c</fullName>
    <label>Homeowner</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>