unpackaged/main/default/objects/SDO_Einstein_Customer_Profile__c/fields/Income_Range__c.field-meta.xml
<CustomField>
    <fullName>Income_Range__c</fullName>
    <label>Income Range</label>
    <length>255</length>
    <type>Text</type>
</CustomField>