unpackaged/main/default/objects/SDO_Einstein_Customer_Profile__c/fields/Likelihood_to_Attrit_in_First_Year__c.field-meta.xml
<CustomField>
    <fullName>Likelihood_to_Attrit_in_First_Year__c</fullName>
    <label>Likelihood to Attrit in First Year</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>