unpackaged/main/default/objects/SDO_Einstein_Customer_Profile__c/fields/Mailing_State__c.field-meta.xml
<CustomField>
    <fullName>Mailing_State__c</fullName>
    <label>Mailing State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>