unpackaged/main/default/objects/SDO_Einstein_Customer_Profile__c/fields/Mailing_street__c.field-meta.xml
<CustomField>
    <fullName>Mailing_street__c</fullName>
    <label>Mailing street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>