unpackaged/main/default/objects/SDO_Einstein_Customer_Profile__c/fields/Monthly_Charges__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Charges__c</fullName>
    <label>Monthly Charges</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>