unpackaged/main/default/objects/SDO_Einstein_Customer_Profile__c/fields/Multiple_Lines__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Lines__c</fullName>
    <label>Multiple Lines</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No phone service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>