unpackaged/main/default/objects/SDO_Einstein_Customer_Profile__c/fields/Paperless_Billing__c.field-meta.xml
<CustomField>
    <fullName>Paperless_Billing__c</fullName>
    <label>Paperless Billing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>