unpackaged/main/default/objects/SDO_Einstein_Customer_Profile__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <label>Partner</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>