unpackaged/main/default/objects/SDO_Einstein_Customer_Profile__c/fields/Phone_Service__c.field-meta.xml
<CustomField>
    <fullName>Phone_Service__c</fullName>
    <label>Phone Service</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>