unpackaged/main/default/objects/SDO_Einstein_Customer_Profile__c/fields/Senior_Citizen__c.field-meta.xml
<CustomField>
    <fullName>Senior_Citizen__c</fullName>
    <label>Senior Citizen</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>