unpackaged/main/default/objects/SDO_Einstein_Customer_Profile__c/fields/Streaming_Movies__c.field-meta.xml
<CustomField>
    <fullName>Streaming_Movies__c</fullName>
    <label>Streaming Movies</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No internet service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>