unpackaged/main/default/objects/SDO_Einstein_Customer_Profile__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Mailing_City__c</columns>
    <columns>Likelihood_to_Attrit_in_First_Year__c</columns>
    <columns>First_Year_Attrition_Outcome__c</columns>
    <columns>Contract__c</columns>
    <columns>Activation_Date__c</columns>
    <columns>Deactivation_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>