unpackaged/main/default/objects/SDO_Einstein_Customer_Profile__c/listViews/Telco_Customers.listView-meta.xml
<ListView>
    <fullName>Telco_Customers</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Mailing_State__c</columns>
    <columns>Likelihood_to_Attrit_in_First_Year__c</columns>
    <columns>First_Year_Attrition_Outcome__c</columns>
    <columns>Contract__c</columns>
    <columns>Activation_Date__c</columns>
    <columns>Deactivation_Date__c</columns>
    <columns>Internet_Service__c</columns>
    <filterScope>Mine</filterScope>
    <label>Telco Customers</label>
</ListView>